--- a/main.tex
+++ b/main.tex
@@ -89,11 +89,11 @@ ERA5 was compared to nine other global reanalyses for seven AMs at 301 stations 
 \subsection{Reanalyses}
 \label{sec:reanalyses}
 
-The present work aims at comparing ERA5 \citep{Hersbach2019} to other global reanalyses, which characteristics are provided in Table \ref{table:datasets}. The three first reanalyses are surface-input \citep{Fujiwara2017} products that assimilate surface data only but cover an extended period, typically the 20th century. NOAA produced the Twentieth Century Reanalysis \citep[version 2c, 20CR-2c --][]{Compo2011}, which only assimilates surface pressure data and uses observed monthly sea-surface temperature and sea-ice distributions as boundary conditions. The European Centre for Medium-Range Weather Forecasts (ECMWF) developed two products using surface input only. The first is ERA-20C \citep{Poli2016} that assimilates marine wind observations and is forced by sea surface temperature, sea ice cover, atmospheric composition changes, and solar forcing. The second is CERA-20C \citep{Laloyaux2018a}, which has an additional coupling to the ocean and was produced by a more recent version of the IFS model.
+The present work aims at comparing ERA5 \citep{Hersbach2019} to other global reanalyses, which characteristics are provided in Table \ref{table:datasets}. The three first reanalyses are surface-input \citep{Fujiwara2017} products that assimilate surface data only but cover an extended period, typically the 20th century. NOAA produced the Twentieth Century Reanalysis \citep[version 2c, 20CR-2c --][]{Compo2011}, which only assimilates surface pressure data and uses observed monthly sea-surface temperature and sea-ice distributions as boundary conditions. The European Centre for Medium-Range Weather Forecasts (ECMWF) developed two products using surface-input only. The first is ERA-20C \citep{Poli2016}, which assimilates marine wind observations and is forced by sea surface temperature, sea ice cover, atmospheric composition changes, and solar forcing. The second is CERA-20C \citep{Laloyaux2018a}, which has an additional coupling to the ocean and was produced by a more recent version of the IFS model.
 
-The other reanalyses are full-input products as they assimilate all available data, including satellite data \citep{Fujiwara2017}. The NCEP/NCAR Reanalysis I \citep[NR-1 --][]{Kalnay1996, Kistler2001} was the first global reanalysis, followed by the NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} that fixed some identified problems. The Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a} is the most recent reanalysis by NCEP. The Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} is produced by the Japan Meteorological Agency (JMA). Its version using conventional data only, JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, was not considered in this work as it provides similar results as JRA-55 \citep{Horton2018b}. NASA's Global Modeling and Assimilation Office (GMAO) released the Modern-Era Retrospective Analysis for Research and Applications, version 2 \citep[MERRA-2 -- ][]{Gelaro2017}, which is an improvement of the first MERRA reanalysis \citep{Rienecker2011}. Finally, the predecessor of ERA5, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, was also considered.
+The other reanalyses are full-input products that assimilate all available data, including satellite data \citep{Fujiwara2017}. NCEP/NCAR Reanalysis I \citep[NR-1 --][]{Kalnay1996, Kistler2001} was the first global reanalysis, followed by NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} that fixed some identified problems. The Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a} is the most recent reanalysis by NCEP. The Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} is produced by the Japan Meteorological Agency (JMA). Its version using conventional data only, JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, was not considered in this work as it provides similar results as JRA-55 \citep{Horton2018b}. NASA's Global Modeling and Assimilation Office (GMAO) released the Modern-Era Retrospective Analysis for Research and Applications, version 2 \citep[MERRA-2 -- ][]{Gelaro2017}, which is an improvement of the first MERRA reanalysis \citep{Rienecker2011}. Finally, the predecessor of ERA5, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, was also considered.
 
-ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It benefits from multiple improvements to the Integrating Forecasting System (IFS), in terms of model physics, core dynamics, and data assimilation \citep{Hersbach2019}. It provides more outputs, with higher temporal (hourly) and spatial (0.28\degree; 31~km) resolutions. The use of a 10-member ensemble of data assimilations at a lower spatial and temporal resolution allows providing an estimate of the uncertainty. ERA5 assimilates significantly more data than ERA-Interim, such as ground-based radar and new satellite sensors, and uses improved observation operators, which allows better comparing model outputs and observations. Additionally, it indirectly profits from improvements of historical observations, both for conventional and satellite data \citep{Hersbach2019}. ERA5 is also more suitable for climate analyses as it relies on appropriate radiative forcing and boundary conditions (e.g., changes in greenhouse gases, aerosols, SST, and sea ice).
+ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It benefits from multiple improvements to the Integrating Forecasting System (IFS), in terms of model physics, core dynamics, and data assimilation \citep{Hersbach2019}. It provides more outputs, with higher temporal (hourly) and spatial (0.28\degree; 31~km) resolutions. The use of a 10-members ensemble of data assimilations at a lower spatial and temporal resolution allows an estimation of the uncertainty. ERA5 assimilates significantly more data than ERA-Interim, such as ground-based radar and new satellite sensors, and uses improved observation operators, which allows better comparing model outputs to observations. Additionally, it indirectly benefits from improvements of historical observations, both for conventional and satellite data \citep{Hersbach2019}. ERA5 provides, among others, more consistent sea surface temperature and sea ice, an improved representation of tropical cyclones, a better balance of evaporation and precipitation, and improved soil moisture. ERA5 is also more suitable for climate analyses as it relies on appropriate radiative forcing and boundary conditions (e.g., changes in greenhouse gases, aerosols, SST, and sea ice).
 
 
 \begin{table}[bt]
@@ -128,15 +128,6 @@ ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It benefits from mult
 	\label{table:datasets}
 \end{table}
 
-%ERA5 strengths compared to ERA-Interim
-%Much higher spatial and temporal resolution
-%Information on variation in quality over space and time
-%Much improved troposphere
-%Improved representation of tropical cyclones
-%Better global balance of precipitation and evaporation
-%Better precipitation over land in the deep tropics
-%Better soil moisture
-%More consistent sea surface temperature and sea ice
 
 \subsection{Precipitation dataset}
 \label{sec:precipitation}
@@ -153,7 +144,7 @@ The local variables to be predicted are here daily precipitation totals (06:00~h
 \subsection{Analog methods}
 \label{sec:ams}
 
-Most variants of the AM from \cite{Horton2018b} were considered (Table \ref{table:methods}). These AMs have different degrees of complexity, but they all start with a preselection in order to cope with seasonality. A commonly used preselection is based on the dates (PC: preselection on a calendar basis in Table \ref{table:methods}) as candidate situations are extracted from the archive for a period of maximum 120~days centered around the target date. To allow for a more dynamic approach, \citet{BenDaoud2016} based this preselection on the similarity of air temperature (T) at 925~hPa and 600~hPa at the nearest grid point. A resulting undesired mixing of spring and autumn situations is discussed in \citet{Caillouet2016}. 
+Most AMs variants from \cite{Horton2018b} were considered here (Table \ref{table:methods}). These AMs have different degrees of complexity, but they all start with a preselection in order to cope with seasonality. A commonly used preselection is based on the dates (PC: preselection on a calendar basis in Table \ref{table:methods}) as candidate situations are extracted from the archive for a period of maximum 120~days centered around the target date. To allow for a more dynamic approach, \citet{BenDaoud2016} base this preselection on the similarity of air temperature (T) at 925~hPa and 600~hPa at the nearest grid point. A resulting undesired mixing of spring and autumn situations is discussed in \citet{Caillouet2016}. 
 
 \begin{table*}[t]
 	\caption{Analogue methods considered in the study, listed by increasing complexity. The analogy criterion is S1 for SLP and Z and RMSE for the other variables.}
@@ -196,20 +187,20 @@ Most variants of the AM from \cite{Horton2018b} were considered (Table \ref{tabl
 	\label{table:methods}
 \end{table*}
 
-All considered AMs have a first level of analogy on the atmospheric circulation, using the geopotential height (Z) at different pressure levels and time as predictor. This analogy is quantified by the S1 criterion \citep[Eq.\ \ref{eq:S1}, ][]{Teweles1954, Brown2012}, which is a comparison of gradients over a selected (calibrated) domain. The objective is to compare the atmospheric flow and not the absolute values of the respective fields. The values of the criterion processed for different levels/hours are here averaged into a single value for a given candidate date. More advanced approaches introduce a weighting between these diverse components \citep{Horton2017a}.
+All considered AMs have a first level of analogy on the atmospheric circulation, using the geopotential height (Z) at different pressure levels and time as predictor. This analogy is quantified by the S1 criterion \citep[Eq.\ \ref{eq:S1}, ][]{Teweles1954, Brown2012}, which is a comparison of gradients over a selected (calibrated) domain. Its purpose is to compare the atmospheric flow and not the absolute values of the respective fields. The values of the criterion processed for different levels/hours are here averaged into a single value for a given candidate date. More advanced approaches introduce a weighting between these diverse components \citep{Horton2017a}.
 
 \begin{equation}
 	\label{eq:S1}
 	S1=100 \frac{\sum_{i} \vert \Delta\hat{z}_{i} - \Delta z_{i} \vert}{\sum_{i} \max\left\lbrace \vert \Delta\hat{z}_{i} \vert; \vert \Delta z_{i} \vert \right\rbrace }
 	% use \displaystyle to max sum sign larger
 \end{equation}
-where $\Delta \hat{z}_{i}$ is the geopotential height gradient between the \textit{i}-th pair of points for the target day, and $\Delta z_{i}$ is the corresponding observed geopotential height gradient for the candidate situation. The smaller the values S1 are, the more similar the pressure fields.
+where $\Delta \hat{z}_{i}$ is the geopotential height gradient between the \textit{i}-th pair of points for the target day, and $\Delta z_{i}$ is the corresponding observed geopotential height gradient for the candidate situation. The smaller the value S1 is, the more similar the pressure fields.
 
-The most simple method, 2Z, is based only on the analogy of the atmospheric circulation, using the geopotential height at 1000~hPa and 500~hPa, \citep{Bontron2004}. The most similar $N_{1}$ dates, with the lowest values of S1, are selected as analogs to the target date. The daily precipitation that was measured at these $N_{1}$ dates then provides the empirical conditional distribution, considered as the probabilistic prediction for the target date.
+The most simple method, 2Z, is based only on the analogy of the atmospheric circulation, using the geopotential height at 1000~hPa and 500~hPa \citep{Bontron2004}. The most similar $N_{1}$ dates with the lowest values of S1 are selected as analogs to the target date. The daily precipitation that was measured at these $N_{1}$ dates then provides the empirical conditional distribution, considered as the probabilistic prediction for the target date.
 
-The second method, 4Z, is also based on geopotential heights only, but using four combinations of pressure levels and temporal windows \citep{Horton2018a}. This method is here considered as a simplified version of a more sophisticated method elaborated by genetic algorithms. It was found that using four geopotential height is more informative than using only two.
+The second method, 4Z, is also based on geopotential heights only, but using four combinations of pressure levels and temporal windows \citep{Horton2018a}. This method is here considered as a simplified version of a more sophisticated method elaborated by genetic algorithms. It was found that using four geopotential heights is more informative than using two.
 
-Then, the next three methods (2Z-2MI, 4Z-2MI, PT-2Z-4MI, Table \ref{table:methods}) add a second level of analogy based on moisture variables to subsample from the first level. The predictor considered here is a moisture index (MI), which is the product of the total precipitable water (TPW) and the relative humidity (RH) and was introduced by \citet{Bontron2004}. This predictor is assessed using the root mean square error (RMSE) criterion. The 2Z-2MI method \citep{Bontron2004} considers this index at 850~hPa for two different hours (+12 h and +24 h). The 4Z-2MI method \citep{Horton2018a}, derived from optimizations with genetic algorithms, consider the 600~hPa and 700~hPa levels, but with a change in the selected levels of the geopotential height compared to 4Z. The 4Z-2MI method \citep{BenDaoud2016} considers the moisture index at 700~hPa and 925~hPa, both at +12 h and +24 h.
+Then, the next three methods (2Z-2MI, 4Z-2MI, PT-2Z-4MI, Table \ref{table:methods}) add a second level of analogy based on moisture variables to subsample from the first level. The predictor considered here is a moisture index (MI), which is the product of the total precipitable water (TPW) and the relative humidity (RH) and was introduced by \citet{Bontron2004}. This predictor is assessed using the root mean square error (RMSE) criterion. The 2Z-2MI method \citep{Bontron2004} uses this index at 850~hPa for two different hours (+12 h and +24 h). The 4Z-2MI method \citep{Horton2018a}, derived from optimizations with genetic algorithms, uses the moisture index at 600~hPa and 700~hPa, with a change in the selected levels of the geopotential height compared to 4Z. The 4Z-2MI method \citep{BenDaoud2016} considers the moisture index at 700~hPa and 925~hPa, both at +12 h and +24 h.
 
 Finally, the most complex method, PT-2Z-4W-4MI, also named "SANDHY" for Stepwise Analogue Downscaling method for Hydrology \citep{BenDaoud2016, Caillouet2016}, adds an intermediate level of analogy, before the moisture predictors, based on the vertical velocity (W) at 850~hPa. It was primarily developed for large and relatively flat/lowland catchments in France (Sa\^{o}ne, Seine).
 
@@ -217,7 +208,7 @@ Finally, the most complex method, PT-2Z-4W-4MI, also named "SANDHY" for Stepwise
 \subsection{Calibration of the methods} %\subsubsection?
 \label{sec:calibration}
 
-The CRPS \citep[Continuous Ranked Probability Score,][]{Brown1974, Matheson1976, Hersbach2000} is often used as the objective function and allows evaluating the predicted cumulative distribution provided by the analogs compared to the single observed value at the target date. Its skill score expression, the CRPSS (Continuous Ranked Probability Skill Score), was used here, using the climatological distribution of precipitation as the reference. It allows a better comparison between stations as it partly takes into account the differences in climatology. The CRPSS is expressed as follows \citep{Bradley2011}:
+The CRPS \citep[Continuous Ranked Probability Score,][]{Brown1974, Matheson1976, Hersbach2000} is often used as the performance metric for AMs as it allows evaluating the predicted cumulative distribution provided by the analogs with regards to the single observed value at the target date. Its skill score expression, the CRPSS (Continuous Ranked Probability Skill Score), was used here, using the climatological distribution of precipitation at each station as the reference. It allows a better comparison between stations as it takes into account the differences in climatology to some extent. The CRPSS is expressed as follows \citep{Bradley2011}:
 
 \begin{equation}
 	\label{eq:CRPSS}
@@ -225,9 +216,9 @@ The CRPS \citep[Continuous Ranked Probability Score,][]{Brown1974, Matheson1976,
 \end{equation}
 where $CRPS_{clim}$ is the CRPS value for the climatological distribution. A better prediction is characterized by an increase in CRPSS.
 
-The methods were here calibrated using the semi-automatic sequential procedure developed by \citet{Bontron2004} and also used in \citet{Radanovics2013} and \citet{BenDaoud2016}. A detailed description can also be found in \citet{Horton2019}. It allows calibrating the spatial windows on which the predictors are compared (specific to each level of analogy) and the number of analog dates to select at the different levels of analogy. The AtmoSwing software \citep{Horton2019} was used to perform this calibration independently for every station, method, and reanalysis. The calculations were performed on an HPC cluster at the University of Bern. 
+The methods were here calibrated using the semi-automatic sequential procedure developed by \citet{Bontron2004} and also used in \citet{Radanovics2013} and \citet{BenDaoud2016}. A detailed description can also be found in \citet{Horton2019}. It allows calibrating the spatial windows on which the predictors are compared (specific to each level of analogy) and the number of analog dates to select for the different levels of analogy. The AtmoSwing software \citep{Horton2019} was used to perform this calibration independently for every station, method, and reanalysis. The calculations were performed on an HPC cluster at the University of Bern. 
 
-After the initial calibration of all AMs for ERA5, some issues were identified with the spatial windows. These were due to some limitations of the calibration procedure related to the high-resolution grid. The process was then restarted using an improvement of the semi-automatic procedure, named classic+ \citep{Horton2019}, which allows additional moves in the calibration of the spatial windows and thus allows escaping local minima. This issue is presented and discussed in section \ref{sec:results_hires}.
+After the initial calibration of all AMs for ERA5, some issues were identified with the spatial windows. These were due to some limitations of the calibration procedure related to the high-resolution grid. The process was then restarted using an improvement of the semi-automatic procedure, named classic+ \citep{Horton2019}, which allows additional moves in the calibration of the spatial windows and thus allows escaping local minima. This issue is shown and discussed in section \ref{sec:results_hires}.
 
 
 \section{Results}
