Improving the results section.

--- a/main.tex
+++ b/main.tex
@@ -229,15 +229,15 @@ The results are provided for the VP (independent validation period, section \ref
 \subsection{Impact on the skill}
 \label{sec:results_skill}
 
-The skill score of the different methods and reanalyses are shown in Fig. \ref{fig:comparison_values}. As discussed in \citet{Horton2018b}, there are clear differences between methods, with more complex AMs generally performing better, and also between reanalyses, in favor of modern full-input reanalyses. One can see here that ERA5 is systematically in the best performing reanalyses. When isolating the impact of the reanalysis by removing the influence of the methods and the stations (Fig. \ref{fig:comparison_relative}), the positive contribution of ERA5 to the skill score is even more clear, with the highest difference for the method PT-2Z-4MI. One can also see a clear improvement compared to ERA-INT.
+The skill scores of the different methods and reanalyses are shown in Fig. \ref{fig:comparison_values}. As discussed in \citet{Horton2018b}, there are clear differences between methods with more complex AMs generally performing better, and also between reanalyses in favor of modern full-input reanalyses. One can see here that ERA5 is systematically in the best performing reanalyses. When isolating the impact of the reanalysis by removing the influence of the methods and the stations (Fig. \ref{fig:comparison_relative}), the positive contribution of ERA5 to the skill score is even more clear, with the largest difference for the method PT-2Z-4MI. One can also see a clear improvement compared to ERA-INT.
 
-ERA5 was selected as the best reanalysis from a minimum of 34.9\% of the stations for 4Z to a maximum of 78.7\% for PT-2Z-4MI, with an average of about 50\%. When considering the first two ranks, ERA5 was selected from a minimum of 61.8\% of the stations for PT-2Z-4W-4MI to a maximum of 91.7\% for PT-2Z-4MI, with an average of 75\%. There were no specific spatial patterns as to which stations performed best with ERA5, such as it was the case with other reanalyses in \citet{Horton2018b}. Also, ERA-INT was not systematically superseded by ERA5, and ERA-INT remained the best choice for some stations and methods. It is thus important to undertake such a comparison of different AMs and multiple stations.
+ERA5 was selected as the best reanalysis for about 50\% of the stations on average, with a minimum of 34.9\% for 4Z and a maximum of 78.7\% for PT-2Z-4MI. When considering the first two ranks, ERA5 was selected 75\% on average, with a minimum of 61.8\% for PT-2Z-4W-4MI and a maximum of 91.7\% for PT-2Z-4MI. There were no specific spatial patterns as to which stations performed best with ERA5, such as it was the case with other reanalyses in \citet{Horton2018b}. Also, ERA-INT was not systematically superseded by ERA5, and ERA-INT remained the best choice for some stations and methods. It is thus important to undertake such a comparison with different AMs and multiple stations.
 
 
 \begin{figure}[bt]
 	\centering
 	\includegraphics[width=\textwidth]{figures/boxplot-per-method.pdf}
-	\caption{CRPSS for all stations and all considered AMs and reanalysis datasets on the VP. A higher CRPSS means better performance. The parameters of the AMs were calibrated for every station, every dataset, and every method. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point which is no more than 1.5 times the interquartile range.}
+	\caption{CRPSS for all stations and all considered AMs and reanalysis datasets on the VP. A higher CRPSS means better performance. The parameters of the AMs were calibrated for every station, every dataset, and every method. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point, which is no more than 1.5 times the interquartile range.}
 	\label{fig:comparison_values}
 \end{figure}
 
@@ -252,7 +252,7 @@ ERA5 was selected as the best reanalysis from a minimum of 34.9\% of the station
 \subsection{High resolution and its pitfalls}
 \label{sec:results_hires}
 
-Although the calibrations have been made on an HPC cluster, they ended up to be highly time-consuming when using the semi-automatic sequential procedure (classic calibration). The reason is that the process involves first the calculation of a relevance map for each level of analogy, which requires an assessment of every unitary cell of the predictor grid. Then, the spatial window in growing by assessing an extension in every four dimensions and by applying the one with the highest gain. On a high-resolution grid, these procedures imply numerous assessments.
+Although the calibrations have been made on an HPC cluster, they ended up to be highly time-consuming when using the semi-automatic sequential procedure (classic calibration, Sect. \ref{sec:calibration}). The reason is that the process involves first the calculation of a relevance map for each level of analogy, which requires an assessment of every unitary cell of the predictor grid. Then, the spatial window in growing by assessing extensions in every four dimensions and by applying the one with the highest gain. On a high-resolution grid, these procedures imply numerous assessments.
 
 \begin{figure}[bt]
 	\centering
@@ -261,24 +261,24 @@ Although the calibrations have been made on an HPC cluster, they ended up to be 
 	\label{fig:resolution}
 \end{figure}
 
-When all calibrations were done, the results showed that ERA5 was performing more poorly than ERA-INT (grayed bars in Fig. \ref{fig:resolution}). An investigation of these results showed that the spatial windows did not grow as much as expected and were not optimal. The reason being that the classic calibration got stuck in local minima during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue did not happen in a significant way for the other reanalyses and is here due to the high resolution of ERA5 that results in a noisier response surface in terms of skill, with local minima that trap the classic calibration. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial window, including increases of multiple grid points at once to get out of local minima. The classic+ calibration also ended up to be faster as it does not assess every grid point in the calculation of the relevance map. With the advent of high resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets.
+The first results of the calibration showed that ERA5 (grayed bars in Fig. \ref{fig:resolution}) underperformed ERA-INT. An examination of these results revealed that the spatial windows did not grow as much as expected and were not optimal. The reason being that the classic calibration got stuck in local minima during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue did not happen in a significant way for the other reanalyses and is here due to the high resolution of ERA5. The high resolution generates in a noisier response surface in terms of skill, with local minima that trap the classic calibration. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial windows, including increases of multiple grid points at once to get out of local minima. The classic+ calibration also ended up to be faster as it does not assess every grid point in the calculation of the relevance map. A global optimization technique, such as genetic algorithms \citep{Horton2017a}, would also efficiently overcome this issue. However, they are generally computationally intensive and too much time consuming for this comparison work. With the advent of high-resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets
 
-\citet{Horton2018b} showed that below 1\degree, the spatial resolution of the reanalyses generally has no significant impact on the performance of AMs. It is because e.g., the geopotential at 500~hPa has a half-autocorrelation distance of about 1000~km \cite{Thiebaux1985}, and thus, the high resolution does not bring new information. It might, however, be different for moisture variables. ERA5 has the highest spatial resolution among global reanalyses. As the results in Sect. \ref{sec:results_skill} were obtained using the full spatial resolution (0.25\degree), an additional calibration was here performed using the same resolution as ERA-INT (0.75\degree) to quantify the contribution of the resolution in the gain relatively to ERA-INT. Fig. \ref{fig:resolution} shows that degrading the resolution of ERA5 to ERA-INT resolution does not significantly impact the score. Although a higher model resolution is likely contributing to the improvements of ERA5 compared to ERA-INT, the high output resolution has no impact on AMs performance for the prediction of daily precipitation. We would have expected to see some gains for moisture variables, but they did not materialize. The gains are thus likely due to improvements in the forecast model, the assimilation scheme, and the assimilated data. While this conclusion is likely valid for predictands that are principally driven by large-scale predictors, it cannot be transposed to all applications. Indeed, when the phenomenon at hand is mainly driven by mesoscale predictors, such as lightning activity, the output spatial resolution does matter (unpublished results).
+\citet{Horton2018b} showed that below 1\degree, the spatial resolution of the reanalyses generally has no significant impact on the performance of AMs. It is because, e.g., the geopotential at 500~hPa has a half-autocorrelation distance of about 1000~km \cite{Thiebaux1985}, and thus, a high resolution does not bring new information. It might, however, be different for moisture variables. ERA5 has the highest spatial resolution among global reanalyses. As the results in Sect. \ref{sec:results_skill} were obtained using the full spatial resolution (0.25\degree), an additional calibration was here performed using the same resolution as ERA-INT (0.75\degree) to quantify the contribution of the resolution to the gain in skill. Fig. \ref{fig:resolution} shows that degrading the resolution of ERA5 to ERA-INT resolution did not significantly impact the score. Although a higher model resolution is likely contributing to the improvements of ERA5 compared to ERA-INT, the high output resolution has no impact on AMs performance for the prediction of daily precipitation. We would have expected to see some gains for moisture variables, but they did not materialize. The gains are thus likely due to improvements in the forecast model, the assimilation scheme, and the assimilated data. While this conclusion is likely valid for predictands that are principally driven by large-scale predictors, it cannot be transposed to all applications. Indeed, when the phenomenon at hand is mainly driven by mesoscale predictors, such as lightning activity, the output spatial resolution does matter (unpublished results).
 
 
 \subsection{Shared analog dates}
 \label{sec:results_shared_dates}
 
-The use of predictors from different datasets, and of distinct spatial windows, result in a different selection of analog dates. The percentage of identical analog dates for the different AMs over the VP is shown in Fig. \ref{fig:shared-dates}. This percentage decreases with the complexity of the AM, and range from a maximum of 74\% between NR-1 and NR-2 for the 2Z method to a minimum of 10\% between MERRA-2 and 20CR-2c for the PT-2Z-4W-4MI method. It is likely that if all reanalyses were compared over the same spatial windows, these numbers would be higher.
+The use of predictors from different datasets, and with distinct spatial windows, results in a different selection of analog dates. The percentage of identical analog dates for the different AMs over the VP is shown in Fig. \ref{fig:shared-dates}. This percentage decreases with the complexity of the AM, and range from a maximum of 74\% between NR-1 and NR-2 for the 2Z method to a minimum of 10\% between MERRA-2 and 20CR-2c for the PT-2Z-4W-4MI method. It is likely that if all reanalyses were compared over the same spatial windows, these numbers would be higher.
 
 \begin{figure}[bt]
 	\centering
 	\includegraphics[width=120mm]{figures/similar-dates.pdf}
-	\caption{Percentage of identical analogue dates selected when using the reanalysis datasets in columns that are also found when using the datasets in rows for different AMs. The values are averaged for all stations on the VP.}
+	\caption{Percentage of identical analog dates, for different AMs, selected when using the reanalyses in columns that were also found when using the reanalyses in rows. The values were averaged for all stations on the VP.}
 	\label{fig:shared-dates}
 \end{figure}
 
-As it could be expected, ERA5 shared some similarities in the selection of analog dates with ERA-INT, but not in order of magnitude that is significantly different from the other modern full-input reanalyses. Indeed, the percentage of shared analog dates is of the same order of magnitude as with CFSR and JRA-55, which are the two reanalyses produced by models with a higher spatial resolution (Table \ref{table:datasets}), but fewer vertical levels. It is worth noting that JRA-55, which presents here strong similarities with ERA5 in terms of selected analog dates for Switzerland, has an output resolution that is five times lower (1.25\degree). However, JRA-55 shares more analog dates with ERA-INT than with ERA5. 
+As it could be expected, ERA5 shared some similarities in the selection of analog dates with ERA-INT, but not to an extent that is significantly different from the other modern full-input reanalyses. Indeed, the percentage of shared analog dates is of the same order of magnitude as with CFSR and JRA-55, which are the two reanalyses produced by models with a high spatial resolution (Table \ref{table:datasets}), but with fewer vertical levels. It is worth noting that JRA-55, which presents here strong similarities with ERA5 in terms of selected analog dates for Switzerland, has an output resolution that is five times lower (1.25\degree). It should be noted, however, that JRA-55 shares more analog dates with ERA-INT than with ERA5. 
 
 
 \section{Conclusions}
